--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	</head>
-	<!-- anti-copy-paste -->
-  <body oncontextmenu='return false;' onkeydown='return false;' onmousedown='return false;'>
+	
+<body oncontextmenu='return false;' onkeydown='return false;' onmousedown='return false;'>
 	<img src="images/img0001.png" id="Logo" alt="Coming Soon" title="Coming Soon">
 	<div id="menu">
 	<ul>
@@ -23,6 +23,8 @@
 	</ul>
 	<br>
 	<p>Internet + Sleep = Life ~</p>
+	<!-- HTML Codes by Quackit.com 
+	Others<marquee class="html-marquee" direction="left" behavior="scroll" scrollamount="12" ><a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a></marquee>-->
 	</div>
 </body>
 </html>
