--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Home</title>
-	<meta name="author" content="krisna">
+	<meta name="author" content="troke">
 	<meta name="keyword" content="tolol,wip,work,in,progress,simple,coming,soon">
 	<meta name="description" content="Study - Internet + Sleep = Life ~">
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	</head>
 	
-<body oncontextmenu='return false;' onkeydown='return false;' onmousedown='return false;'>
+	<body oncontextmenu='return false;' onkeydown='return false;' onmousedown='return false;'>
 	<img src="images/img0001.png" id="Logo" alt="Coming Soon" title="Coming Soon">
 	<div id="menu">
 	<ul>
@@ -18,7 +18,7 @@
 		</li>
 		<li><a href="https://player.me/-troke-" target="_blank">Players</a>
 		</li>
-		<li><a href="http://twitter.com/krisna_pradnya1" target="_blank">Twitter</a>
+		<li><a href="http://facebook.com/troke12" target="_blank">Facebook</a>
 		</li>
 	</ul>
 	<br>
